# crossdb

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  build.cmd  crossdb.h  winbuild.cmd
.github/ISSUE_TEMPLATE/: bug_report.md
CrossBench/: Readme.md  bar-label-rotation.html  dataset-simple0.html  edbBench.c  lmdb_drv.c  rows-test.html  test.html
Projects/Mgmt/HLR-cdb/: Readme.md
Projects/OLTP/Ticket-cdb/: Readme.md
bench/basic/: Makefile  bench-boostmidx.cpp  bench-crossdb.c  bench-sqlite.c  bench-stlmap.cpp  bench.h  bench.sh  bench.txt
bench/c/: Makefile  bench.c
connector/go/: crossdb.go  go.mod
connector/python/: crossdb.py
download/: file.txt
examples/: build.bat  build.sh  example.c  tutorial.c
examples/c/: Makefile  crossdb.h  example.c  test.c
examples/go/: bench.go  example.go  go.mod
examples/python/: example.py
include/: crossdb.h
jni/: CMakeLists.txt  db_jni.cpp
jni/include/: com_open_crossdb_jni_core_CrossDBJNI.h
src/: crossdb.c  crossdb.h  main.c  xdb-cli.c
src/3rd/: crossline.c  crossline.h  wyhash.h  wyhash32.h
src/admin/: xdb_backup.c  xdb_backup.h  xdb_shell.c  xdb_shell.h
src/core/: xdb_cfg.h  xdb_common.h  xdb_conn.c  xdb_conn.h  xdb_crud.c  xdb_crud.h  xdb_db.c  xdb_db.h  xdb_expr.c  xdb_expr.h  xdb_fkey.c  xdb_fkey.h  xdb_hash.c  xdb_hash.h  xdb_index.c  xdb_index.h  xdb_rbtree.c  xdb_rbtree.h  xdb_sql.c  xdb_sql.h  xdb_store.c  xdb_store.h  xdb_sysdb.c  xdb_sysdb.h  xdb_table.c  xdb_table.h  xdb_trans.c  xdb_trans.h  xdb_trigger.c  xdb_trigger.h  xdb_vdata.c  xdb_vdata.h  xdb_wal.c  xdb_wal.h
src/lib/: xdb_bmp.c  xdb_bmp.h  xdb_dynbuf.c  xdb_dynbuf.h  xdb_file.c  xdb_lib.c  xdb_lib.h  xdb_mmap.c  xdb_objm.c  xdb_objm.h  xdb_sock.c  xdb_str.c  xdb_thread.c  xdb_time.c  xdb_vector.c  xdb_vector.h
src/parser/: xdb_json.c  xdb_parser.c  xdb_parser_db.c  xdb_parser_dml.c  xdb_parser_idx.c  xdb_parser_pubsub.c  xdb_parser_svr.c  xdb_parser_tbl.c  xdb_parser_trig.c  xdb_stmt.h  xdb_token.c  xdb_token.h
src/server/: xdb_client.c  xdb_pubsub.c  xdb_pubsub.h  xdb_server.c  xdb_server.h
test/: Makefile  xdb_smoke_ddl.c  xdb_smoke_dml.c  xdb_smoke_func.c  xdb_smoke_semantic.c  xdb_smoke_test.c  xdb_smoke_trans.c  xdb_test.c
